@@ -5,6 +5,7 @@ import com.canto.firstspirit.service.CantoSaasServiceProjectBoundClient;
 import com.canto.firstspirit.service.server.model.CantoAssetDTO;
 import com.canto.firstspirit.service.server.model.CantoSearchParams;
 import com.canto.firstspirit.service.server.model.CantoSearchResultDTO;
+import com.canto.firstspirit.util.CantoScheme;
 import de.espirit.common.base.Logging;
 import de.espirit.firstspirit.client.plugin.dataaccess.DataStream;
 import de.espirit.firstspirit.client.plugin.dataaccess.DataStreamBuilder;
@@ -12,13 +13,17 @@ import de.espirit.firstspirit.client.plugin.dataaccess.aspects.Filterable;
 import de.espirit.firstspirit.client.plugin.dataaccess.aspects.StreamBuilderAspectMap;
 import de.espirit.firstspirit.client.plugin.dataaccess.aspects.StreamBuilderAspectType;
 import de.espirit.firstspirit.client.plugin.report.Parameter;
+import de.espirit.firstspirit.client.plugin.report.Parameter.Factory;
 import de.espirit.firstspirit.client.plugin.report.ParameterMap;
+import de.espirit.firstspirit.client.plugin.report.ParameterSelect;
+import de.espirit.firstspirit.client.plugin.report.ParameterSelect.SelectItem;
 import de.espirit.firstspirit.client.plugin.report.ParameterText;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
+import java.util.stream.Collectors;
 import org.jetbrains.annotations.NotNull;
 
 
@@ -28,14 +33,19 @@ public class CantoDAPStreamBuilder implements DataStreamBuilder<CantoDAPAsset>, 
   private final CantoSaasServiceProjectBoundClient cantoSaasServiceClient;
   private ParameterMap parameterMap;
   private final ParameterText paramKeyword;
-  private final ParameterText paramTag;
-
+  private final ParameterSelect paramScheme;
 
   public CantoDAPStreamBuilder(CantoSaasServiceProjectBoundClient cantoSaasServiceClient) {
     this.cantoSaasServiceClient = cantoSaasServiceClient;
     aspects.put(Filterable.TYPE, this);
     paramKeyword = Parameter.Factory.createText("keyword", "Keyword", "");
-    paramTag = Parameter.Factory.createText("tag", "Tag", "");
+
+    List<SelectItem> schemeSelectList = Arrays.stream(CantoScheme.values())
+        .map(cantoScheme -> Factory.createSelectItem(cantoScheme.getDisplayName(), cantoScheme.toString()))
+        .collect(Collectors.toList());
+
+    schemeSelectList.add(0, Parameter.Factory.createSelectItem("-", ""));
+    paramScheme = Parameter.Factory.createSelect("scheme", schemeSelectList, "");
   }
 
   @Override public <A> A getAspect(@NotNull StreamBuilderAspectType<A> streamBuilderAspectType) {
@@ -47,9 +57,7 @@ public class CantoDAPStreamBuilder implements DataStreamBuilder<CantoDAPAsset>, 
   }
 
   @NotNull @Override public List<Parameter<?>> getDefinedParameters() {
-
-    // return Collections.singletonList(paramKeyword);
-    return Arrays.asList(paramKeyword, paramTag);
+    return List.of(paramKeyword, paramScheme);
   }
 
   @Override public void setFilter(@NotNull ParameterMap parameterMap) {
@@ -67,7 +75,7 @@ public class CantoDAPStreamBuilder implements DataStreamBuilder<CantoDAPAsset>, 
     CantoSearchParams searchParams;
 
     public CantoDAPDataStream() {
-      searchParams = new CantoSearchParams(0, 0, parameterMap.get(paramKeyword));
+      searchParams = new CantoSearchParams(0, 0, parameterMap.get(paramKeyword), parameterMap.get(paramScheme));
       fetchedAssets = null;
     }
 
@@ -81,7 +89,10 @@ public class CantoDAPStreamBuilder implements DataStreamBuilder<CantoDAPAsset>, 
         fetchedAssets = new LinkedList<>();
       }
 
-      searchParams = new CantoSearchParams(searchParams.getStart() + searchParams.getLimit(), pageSize, searchParams.getKeyword());
+      searchParams = new CantoSearchParams(searchParams.getStart() + searchParams.getLimit(),
+                                           pageSize,
+                                           parameterMap.get(paramKeyword),
+                                           parameterMap.get(paramScheme));
 
       if (searchParams.getStart() <= total) {
         Logging.logInfo("[fetchNextPage] Fetching next page, " + searchParams + ", total=" + total, this.getClass());
